# ac215_bitefinder

./: .gitignore  .pre-commit-config.yaml  README.md  env.dev  env_TEMPLATE.dev
src/image_augmentation/: .gitignore  Dockerfile  README.md  augment_images.py  docker-shell.sh  pyproject.toml
src/input_evaluation/: Dockerfile  README.md  docker-entrypoint.sh  docker-shell.sh  pyproject.toml  pytest.ini
src/input_evaluation/api/: config.py  logging.py  main.py  schemas.py
src/input_evaluation/api/routes/: image_eval.py  prompt_template.md  prompt_template_followup.md  prompt_template_initial.md  text_eval.py
src/input_evaluation/api/services/: gcs_io.py  image_quality.py  vertex_llm.py
src/input_evaluation/app/: config.py  logging.py  main.py  schemas.py
src/input_evaluation/app/routes/: image_eval.py  prompt_template.md  text_eval.py
src/input_evaluation/app/services/: gcs_io.py  image_quality.py  out.csv  utils.py  vertex_llm.py
src/input_evaluation/tests/: test_image_eval.py  test_image_quality.py
src/input_evaluation/tests/integration/: test_integration_image_eval.py  test_integration_text_eval.py
src/input_evaluation/tests/unit/: test_extra.py  test_image_eval.py  test_image_quality.py  test_text_eval.py
src/ragmodel/: .gitignore  Dockerfile  README.md  agent_tools.py  cli-vertexAI.py  cli.py  docker-compose.yml  docker-entrypoint.sh  docker-shell.sh  pyproject.toml  rag_pipeline.py  rag_router.py  rag_service.py  semantic_splitter.py
src/ragmodel/api/: __init__.py  main.py
src/ragmodel/api/routes/: rag_router.py
src/ragmodel/api/scripts/: build_vector_store.py  create_index.py
src/ragmodel/api/services/: agent_tools.py  pinecone_adapter.py  rag_pipeline.py  semantic_splitter.py
src/ragmodel/input-datasets/bugs/: ant bites.txt  bed bug bites.txt  chigger bites.txt  flea bites.txt  mosquito bites.txt  spider bites.txt  tick bites.txt
src/ragmodel/tests/integration/: test_rag_chat_integration.py
src/ragmodel/tests/unit/: test_pinecone_adapter.py  test_rag_pipeline.py  test_rag_router.py
src/synthetic_label_generation/: Dockerfile  README.md  docker-shell-local.sh  docker-shell-vm.sh  docker-shell.sh  label_generation.py  pyproject.toml  utils.py
src/synthetic_label_generation/input/: symptoms.json
src/vlmodel/: Dockerfile  README.md  SERVERLESS_TRAINING.md  cli.py  cli_infer.py  cli_train.py  dataset.py  docker-entrypoint.sh  docker-shell.sh  infer.py  inference_router.py  inference_service.py  job_config.yaml  ml-test.py  model.py  package-trainer.sh  package_training.sh  pyproject.toml  run_training.sh  serverless_training.md  submit-training-job.sh  train.py  trainer.py  utils_gcp.py  utils_model.py  utils_save.py  vertex-ai-training-job.json
src/vlmodel/api/: job_config.yaml  main.py  package_training.sh  run_training_job.sh  sweep_config.yaml  vlmodel_router.py
src/vlmodel/api/package/: setup.py
src/vlmodel/app/: inference_router.py  run_training_job.sh
src/vlmodel/package/: setup.py
src/vlmodel/package/inference/: __init__.py  cli.py  inference_cli.py  task.py
src/vlmodel/package/trainer/: dataset.py  model.py  task.py  trainer.py  trainer_module.py  utils_save.py  utils_wandb.py
src/vlmodel/package/training/: dataset.py  task.py  trainer.py
src/vlmodel/tests/integration/: test_integration_api.py  test_integration_inference.py
src/vlmodel/tests/unit/: test_inference.py  test_unit_api.py  (+2 more)
src/vlmodel/trainer/: __init__.py  task.py
(+132 files in other folders)
