[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.4,<2",
    "pandas>=2.3.3",
    "pinecone==7.3.0",
    "uvicorn",
    "google-genai>=1.39.1",
    "langchain>=0.3.27",
    "fastapi>=0.115.0",
    "langchain-community>=0.3.30",
    "openai>=1.95.1",
    "openai-agents>=0.3.2",
]
