[project]
name = "app"
version = "0.1.0"
description = "Vision-language modeling"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage",
    "google-cloud-secret-manager",
    "numpy",
    "openai",
    "pandas",
    "scikit-learn",
    "torch",
    "torchvision",
    "transformers",
    "wandb",
    "fastapi",
    "uvicorn",
]
