[project]
name = "app"
version = "0.1.0"
description = "Vision-language modeling"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage",
    "google-cloud-secret-manager",
    "torch",
    "transformers",
    "wandb",
    "fastapi",
    "uvicorn",
    "black",
    "flake8",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
