[project]
name = "app"
version = "0.1.0"
description = "Vision-language modeling"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage",
    "google-cloud-secret-manager",
    "pillow",
    "torch",
    "transformers",
    "wandb",
    "fastapi",
    "uvicorn",
    "black",
    "flake8",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pillow-heif>=1.1.1",
]

[tool.black]
line-length = 140
skip-string-normalization = true

[tool.flake8]
max-line-length = 140
extend-ignore = ["E203"]
